// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders danger variant 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full font-medium whitespace-nowrap bg-red-50 text-red-700 ring-1 ring-inset ring-red-200 dark:bg-red-950/40 dark:text-red-300 dark:ring-red-900 h-6 px-2.5 text-xs gap-1.5 "
>
  Reddedildi
</span>
`;

exports[`Badge > renders default variant 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full font-medium whitespace-nowrap bg-slate-100 text-slate-700 ring-1 ring-inset ring-slate-200 dark:bg-slate-800 dark:text-slate-300 dark:ring-slate-700 h-6 px-2.5 text-xs gap-1.5 "
>
  Default
</span>
`;

exports[`Badge > renders info variant 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full font-medium whitespace-nowrap bg-blue-50 text-blue-700 ring-1 ring-inset ring-blue-200 dark:bg-blue-950/40 dark:text-blue-300 dark:ring-blue-900 h-6 px-2.5 text-xs gap-1.5 "
>
  Bilgi
</span>
`;

exports[`Badge > renders success variant 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full font-medium whitespace-nowrap bg-emerald-50 text-emerald-700 ring-1 ring-inset ring-emerald-200 dark:bg-emerald-950/40 dark:text-emerald-300 dark:ring-emerald-900 h-6 px-2.5 text-xs gap-1.5 "
>
  Onaylandı
</span>
`;

exports[`Badge > renders warning variant 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full font-medium whitespace-nowrap bg-amber-50 text-amber-800 ring-1 ring-inset ring-amber-200 dark:bg-amber-950/40 dark:text-amber-300 dark:ring-amber-900 h-6 px-2.5 text-xs gap-1.5 "
>
  Beklemede
</span>
`;
